After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725866 - DnD fixes
DnD fixes
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkEntry
unspecified
Other Mac OS
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-03-07 00:25 UTC by Carlos Garnacho
Modified: 2014-03-07 04:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
entry: use priv->dnd_position when rendering the DND cursor (1.17 KB, patch)
2014-03-07 00:26 UTC, Carlos Garnacho
committed Details | Review
entry: Make DnD coordinate calculation compensate for entry icons (1.93 KB, patch)
2014-03-07 00:26 UTC, Carlos Garnacho
committed Details | Review

Description Carlos Garnacho 2014-03-07 00:25:36 UTC
Lately, not sure when, GtkEntry lost the ability to render the cursor at the position the text would be dropped on DnD operations. I also came to notice that DnD has an offset when done on any GtkEntry with an icon on its left, apparently the DnD code doesn't compensate for icons in widget coordinates. I'm adding two patches to fix these buglets.
Comment 1 Carlos Garnacho 2014-03-07 00:26:08 UTC
Created attachment 271160 [details] [review]
entry: use priv->dnd_position when rendering the DND cursor

This makes "cursor position" track the DnD point again, looks much
more intuitive than just rendering it on the pre-DnD position.
Comment 2 Carlos Garnacho 2014-03-07 00:26:12 UTC
Created attachment 271161 [details] [review]
entry: Make DnD coordinate calculation compensate for entry icons

This made DnD have effect farther on the left when dragging text over
any entry with icons in it.
Comment 3 Matthias Clasen 2014-03-07 04:20:23 UTC
Attachment 271160 [details] pushed as adf39dd - entry: use priv->dnd_position when rendering the DND cursor
Attachment 271161 [details] pushed as 43b0eee - entry: Make DnD coordinate calculation compensate for entry icons